Create github concern migrations and add some basic repo ui

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
       div class="fill navbar-inner"
         div class="container-fluid"
           = link_to 'code_critic', '/', :class => 'brand'
+          = render 'shared/menu'
 
     .container-fluid
       = render "shared/flashes"
