--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
 
-  body class=controller_name
+  body
     div class="navbar navbar-fixed-top"
       div class="fill navbar-inner"
         div class="container-fluid"
