--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -2,4 +2,4 @@
   h2 Review Requests
   = render 'review_requests/table', review_requests: current_user.review_requests
 - else
-  = link_to "Log in with xrono...", "http://codecritic.isotope11.com/users/auth/xrono"
+  = link_to "Log in with xrono...", "/users/auth/xrono"
