omg i spell bad

--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -3,6 +3,6 @@
   - if current_user.review_requests.present?
     = render 'review_requests/table', review_requests: current_user.review_requests
   - else
-    p You have no review requests at this time.  Your doing it right!
+    p You have no review requests at this time.  You're doing it right!
 - else
   = link_to "Log in with xrono...", "/users/auth/xrono"
