made the comment create update the review request and complete/hide it, fixed the condition text for reviews on the home page, changed status to state on review requests

--- a/app/views/commits/show.html.slim
+++ b/app/views/commits/show.html.slim
@@ -19,7 +19,7 @@
   = f.submit 'Request Review'
 
 .review_request
-  - if @commit.review_requests.present?
+  - if @commit.review_requests.not_complete.present?
     h2 Review Requests
     table
       thead
