--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,9 +41,11 @@ body {
   .commit-sha-link {
     float: right;
     font-size: .75rem;
-    padding: .5rem;
-    background-color: #ddd;
-    @include border-radius(4px);
+    a {
+      padding: .5rem;
+      background-color: #ddd;
+      @include border-radius(4px);
+    }
   }
 }
 
