--- a/app/views/commits/show.html.slim
+++ b/app/views/commits/show.html.slim
@@ -31,7 +31,12 @@
             td= rr.user.email
 
 - @git_commit.diffs.each do |diff|
-  pre
-    code= diff.diff
+  table.diff-table
+    tbody
+      - diff.diff.each_line do |diff_line|
+        - diff_line = DiffLine.new(diff_line)
+        tr
+          td class="diff-line #{diff_line.added_or_removed}"
+            = diff_line.to_s.html_safe
 
 = comments_for @commit
