--- a/app/views/opinio/comments/_new.html.slim
+++ b/app/views/opinio/comments/_new.html.slim
@@ -3,7 +3,7 @@ div id="new_comment"
     h3= t('opinio.messages.add_comment')
     = form_for Comment.new, :remote => false do |f|
       p
-        = f.text_area :body
+        = f.text_area :body, rows: nil, cols: nil
       = hidden_field_tag :commentable_id, commentable.id
       = hidden_field_tag :commentable_type, commentable.class.base_class.name.to_s
       = f.submit t('opinio.actions.add')
