--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,107 +5,15 @@
 @import 'compass_twitter_bootstrap_awesome';
 @import 'compass_twitter_bootstrap_responsive';
 
-$diff-green: #DDFFDD;
-$diff-red:   #FFDDDD;
-
-.code-font {
-  font-family: Consolas,Menlo,"Liberation Mono",Courier,monospace;
-}
-
-body {
-  margin-top: 50px;
-}
+@import 'variables';
+@import 'helpers';
+@import 'layout';
+@import 'diffs';
+@import 'commits';
 
 .author-image-small {
   width: 2.5rem;
   @include border-radius(4px);
-}
-
-.commits{
-  margin: 0 auto;
-}
-
-.commit {
-  clear: both;
-  padding: .5rem;
-  border-bottom: 1px solid #eee;
-  &:hover {
-    background-color: #eee;
-  }
-  .commit-title{
-    display: inline-block;
-    font-weight: bold;
-    width: 70%;
-  }
-  .commit-author{
-    font-size: .75rem;
-    color: #666;
-  }
-  .author-image-small {
-    float: left;
-    margin-right: 1rem;
-  }
-  .commit-sha-link {
-    float: right;
-    font-size: .75rem;
-    a {
-      padding: .5rem;
-      background-color: #ddd;
-      @include border-radius(4px);
-    }
-  }
-}
-
-.sha {
-  @extend .code-font;
-}
-
-.commit-card {
-  border: 1px solid #ccc;
-  background-color: #eee;
-  @include border-radius(4px);
-  h2 {
-    padding: .5rem;
-    color: #333;
-    a {
-      float: right;
-      font-size: .75rem;
-    }
-  }
-  .commit-info {
-    padding: .5rem;
-    background-color: white;
-    @include border-radius(0 0 4px 4px);
-  }
-  .author {
-    font-weight: bold;
-  }
-  .sha-wrapper {
-    float: right;
-  }
-  .author-image-small {
-    float: left;
-    margin-right: 1rem;
-    width: 1.5rem;
-  }
-}
-
-.clear {
-  clear: both;
-}
-
-.diff-table {
-  width: 100%;
-}
-
-.diff-line {
-  @extend .code-font;
-  &.added {
-    background-color: $diff-green;
-  }
-  &.removed {
-    background-color: $diff-red;
-  }
 }
 
 .new_comment {
