--- a/app/assets/stylesheets/_diffs.css.scss
+++ b/app/assets/stylesheets/_diffs.css.scss
@@ -1,6 +1,7 @@
 .diff-table {
   width: 100%;
   border: 1px solid $primary-border;
+  margin-bottom: 2em;
   th {
     padding: 1em;
     font-weight: normal;
