--- a/app/views/opinio/comments/_comments.html.slim
+++ b/app/views/opinio/comments/_comments.html.slim
@@ -1,7 +1,7 @@
 div
   = paginate comments
 
-ul id="comments"
+ul.comments
   - unless comments.empty?
     = render :partial => 'opinio/comments/comment', :collection => comments
   - else
